# fhirspec

./: .gitignore  .lgtm.yml  .travis.yml  AUTHORS.rst  MANIFEST.ini  Makefile  README.rst  fhirspec.py  pyproject.toml
tests/: baseconfig.py  fixtures.py  test_fhirspec.py  test_utilities_fhirspec.py
tests/static/: testconfig.json
tests/static/profiles/R4/: 4.0.1-version.info
