[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fhirspec"
author = "Md Nazrul Islam"
author-email = "email2nazrul@gmail.com"
home-page = "https://github.com/nazrulworld/fhirspec"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
requires = ["setuptools"]
description-file = "README.rst"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://nazrul.me/fhirspec/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.0.0",
    "pytest-cov"
]
dev = [
    "mypy",
    "black",
    "isort",
    "autoflake",
    "flake8",
    "vulture",
    "twine"
]
all = [
	"pytest >=4.0.0",
    "pytest-cov",
    "mypy",
    "black",
    "isort",
    "autoflake",
    "flake8",
    "vulture",
    "twine"
]

[requires]
python_version = "3.7"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
