[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fhirspec"
dist-name = "fhirspec"
author = "Md Nazrul Islam"
author-email = "email2nazrul@gmail.com"
home-page = "https://github.com/nazrulworld/fhirspec"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
requires = ["setuptools"]
description-file = "README.rst"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://nazrul.me/fhirspec/"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.1.2",
    "pytest-cov==2.10.1",
    "mypy",
    "black",
    "isort",
    "flake8"
]
dev = [
    "autoflake",
    "vulture",
    "json5"
]
toml = [
	"pytoml"
]
all = [
	"pytest==6.1.2",
    "pytest-cov==2.10.1",
    "mypy",
    "black",
    "isort",
    "autoflake",
    "flake8",
    "vulture",
    "pytoml",
    "json5"
]

[requires]
python_version = "3.7"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
